--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "bootstrap": "^5.3.2",
+    "i18next": "^25.2.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.5.3",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
