--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.5.3",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
